--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,7 +3,7 @@ steps:
   UpdateHelmChartDependencies:
     image: 'codefresh/cfstep-helm:2.9.1'
     commands:
-      - helm repo add cm://h.cfcr.io/teacherspayteachers/default/
+      - helm repo add codefresh cm://h.cfcr.io/teacherspayteachers/default/
       - helm dependency update
   HelmPush:
     image: 'codefresh/cfstep-helm:2.9.1'
