--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,5 +1,10 @@
 version: '1.0'
 steps:
+  AddCFRepo:
+    image: 'codefresh/cfstep-helm:2.9.1'
+    commands:
+      - ACTION=auth
+      - helm repo add codefresh cm://h.cfcr.io/teacherspayteachers/default/
   UpdateHelmChartDependencies:
     image: 'codefresh/cfstep-helm:2.9.1'
     commands:
@@ -7,6 +12,7 @@ steps:
       - helm repo list
 #  HelmPush:
 #    image: 'codefresh/cfstep-helm:2.9.1'
+#    repo: 
 #    environment:
 #      - ACTION=push
 #      - CHART_NAME=./
