--- a/codefresh.yml
+++ b/codefresh.yml
@@ -5,7 +5,7 @@ steps:
     environment:
       - ACTION=auth
     commands:
-      - helm repo add codefresh cm://h.cfcr.io/teacherspayteachers/default/
+      - helm dep up
   UpdateHelmChartDependencies:
     image: 'codefresh/cfstep-helm:2.9.1'
     environment:
