--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - name: kube-toy
     version: ~0.1.0-any
-    repository: '@codefresh'
+    repository: cm://h.cfcr.io/teacherspayteachers/default
   - name: kube-service
     version: ~0.1.1-any
-    repository: '@codefresh'
+    repository: cm://h.cfcr.io/teacherspayteachers/default
