--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - name: kube-toy
     version: 0.1.0-master
-    repository: cm://h.cfcr.io/teacherspayteachers/default
+    repository: '@codefresh'
   - name: kube-service
     version: 0.1.1-master
-    repository: cm://h.cfcr.io/teacherspayteachers/default
+    repository: '@codefresh'
