--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - name: kube-toy
-    version: ~0.1.0-any
+    version: 0.1.0
     repository: '@codefresh'
   - name: kube-service
-    version: ~0.1.1-any
+    version: 0.1.1
     repository: '@codefresh'
